[FIX] UI - Image was not aligned when using tailwind

--- a/src/template.css
+++ b/src/template.css
@@ -47,6 +47,7 @@
   vertical-align: middle;
   opacity: 0.3;
   height: 15px;
+  display: inline-block;
 }
 
 #cookie-show-more {
